--- a/src/app/components/admin/admin-page/admin-page-list/admin-page-list.component.html
+++ b/src/app/components/admin/admin-page/admin-page-list/admin-page-list.component.html
@@ -8,7 +8,7 @@
 <div class="container mb-3">
     <div class="row">
         <div class="col-lg-4 offset-lg-8">
-            <div class="card bg-light text-light image-uploader text-center">
+            <div class="card bg-light text-light text-center">
                 <div class="card-body p-3">
                     <label class="switcher switcher-md">
                         <input type="checkbox" class="switcher-input">
