--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -9,13 +9,14 @@
         <div class="layout-container">
             <!-- * Navbar * -->
             <ddw-admin-navbar></ddw-admin-navbar>
-            <!-- * App Container * -->
+            <!-- * Fab Toggle Button * -->
             <button mat-mini-fab (click)="onToggleSidenav()">
                 <i class="fa"
                    [ngClass]="{'fa-chevron-double-left':toggleSidenav,
                    'fa-chevron-double-right':!toggleSidenav}">
                 </i>
             </button>
+            <!-- * App Container * -->
             <router-outlet></router-outlet>
             <ddw-admin-mobile-footernav></ddw-admin-mobile-footernav>
         </div>
