--- a/src/app/components/admin/admin-core/admin-settings/admin-settings.component.html
+++ b/src/app/components/admin/admin-core/admin-settings/admin-settings.component.html
@@ -19,20 +19,27 @@
     <div class="container">
         <div class="card">
             <div class="card-body">
+                <h5>Application Settings</h5>
                 <div class="row">
                     <div class="col-md-6">
-                        <form #settingsForm="ngForm"
-                              (ngSubmit)="onSettingsSubmit(settingsForm)">
-
+                        <ng-template #settingsLoading>
+                            <div class="text-center text-dark p-5">
+                                <i class="far fa-spinner fa-pulse"></i>
+                                <br>
+                                loading...
+                            </div>
+                        </ng-template>
+                        <form (ngSubmit)="onSettingsSubmit(settingsForm.value)"
+                              [formGroup]="settingsForm"
+                              *ngIf="settings; else settingsLoading">
                             <div class="form-group">
                                 <div class="form-group form-check">
                                     <input type="checkbox"
                                            id="allowSignup"
                                            class="form-check-input"
-                                           name="allowSignup"
                                            [checked]="settings.allowSignup"
                                            [(ngModel)]="allowSignup"
-                                           #allowSign="ngModel">
+                                           formControlName="allowSignup">
 
                                     <label class="form-check-label"
                                            for="allowSignup"
@@ -47,10 +54,9 @@
                                     <input type="checkbox"
                                            id="allowSettings"
                                            class="form-check-input"
-                                           name="allowSettings"
                                            [checked]="settings.allowSettings"
                                            [(ngModel)]="allowSettings"
-                                           #allowSet="ngModel">
+                                           formControlName="allowSettings">
 
                                     <label class="form-check-label"
                                            for="allowSettings"
@@ -66,10 +72,9 @@
                                     <input type="checkbox"
                                            id="disableAdmin"
                                            class="form-check-input"
-                                           name="disableAdmin"
                                            [checked]="settings.disableAdmin"
                                            [(ngModel)]="disableAdmin"
-                                           #disableAd="ngModel">
+                                           formControlName="disableAdmin">
 
                                     <label class="form-check-label"
                                            for="disableAdmin"
@@ -132,7 +137,8 @@
                                 <label>
                                     <h5>DDW Daily News Video</h5>
                                     <p class="text-light">URL needs to come from a embedded iFrame</p>
-                                    <p class="text-light">ie. Go to YouTube video > share > embed > grab url from src="this-url"</p>
+                                    <p class="text-light">ie. Go to YouTube video > share > embed > grab url from
+                                        src="this-url"</p>
                                 </label>
                                 <input type="url"
                                        class="form-control"
