--- a/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.css
+++ b/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.css
@@ -40,3 +40,84 @@ img.card-img-top {
 .slug {
     font-size: 1em;
 }
+
+/* PREVIEW */
+img.bannerPhotoURL {
+    top: 0;
+    left: 0;
+    position: relative;
+    max-height: 100px;
+    width: 100%;
+    /*z-index: 0;*/
+}
+
+h1.title {
+    position: absolute;
+    top: 5%;
+    color: #ffffff;
+    font-weight: bold;
+    font-size: 22px;
+}
+
+p {
+
+}
+
+.row.crumbs {
+    padding: 1em 0;
+}
+
+ol.breadcrumb, li.breadcrumb-item {
+    background-color: #fff;
+}
+
+img.photoURL {
+    max-width: 200px;
+    float: right;
+    margin: 0 0 1em 1em;
+}
+
+h2.card-sec-title {
+    padding-top: 2em;
+}
+
+.preview-body {
+    font-size: 0.75em;
+}
+
+.underline {
+    border-bottom: 2px solid #FEB512;
+    margin-top: 1em;
+}
+
+.row.cards {
+    margin: 5em 0 8em 0;
+}
+
+
+.card-body {
+    line-height: 2em;
+}
+
+.card-text {
+    padding: 2em;
+}
+
+a.btn.btn-warning.btn-lg {
+    background-color: #F47700;
+    color: #fff;
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    border-radius: 0;
+    font-weight: bold;
+}
+
+a.btn.btn-warning.btn-lg:hover {
+    background-color: #FEB512;
+    color: #fff;
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    border-radius: 0;
+    font-weight: bold;
+}
+
