--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600,600i,700,700i');
+/*font-family: 'Open Sans', Roboto, 'Helvetica Neue', sans-serif;*/
 
 /* CUSTOM FRONT-END STYLES */
 
@@ -12,9 +14,6 @@
     padding: 1em 0;
     vertical-align: middle;
 }
-
-
-
 
 
 /* Application wide Styles */
