Got slugs working by making new pages use the slug versus the

--- a/src/app/components/admin/admin-core/admin-meta/admin-meta.component.html
+++ b/src/app/components/admin/admin-core/admin-meta/admin-meta.component.html
@@ -116,20 +116,20 @@
                              <!--</pre>-->
                         <!--</div>-->
 
-                        <div class="form-group">
-                            <label>SEO Meta Tags <br>
-                                <small>(Bottom of header tags)</small>
-                            </label>
-                            <pre>
-                                <textarea type="text"
-                                          rows="13"
-                                          class="form-control"
-                                          placeholder="Insert your meta tags here..."
-                                          [(ngModel)]="meta.seo"
-                                          formControlName="seo">
-                                </textarea>
-                            </pre>
-                        </div>
+                        <!--<div class="form-group">-->
+                            <!--<label>SEO Meta Tags <br>-->
+                                <!--<small>(Bottom of header tags)</small>-->
+                            <!--</label>-->
+                            <!--<pre>-->
+                                <!--<textarea type="text"-->
+                                          <!--rows="13"-->
+                                          <!--class="form-control"-->
+                                          <!--placeholder="Insert your meta tags here..."-->
+                                          <!--[(ngModel)]="meta.seo"-->
+                                          <!--formControlName="seo">-->
+                                <!--</textarea>-->
+                            <!--</pre>-->
+                        <!--</div>-->
 
                         <div class="form-group">
                             <label>Footer Scripts Tags <br>
