PublishOn date is now working

--- a/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.html
+++ b/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.html
@@ -100,7 +100,7 @@
 
                         <div class="form-group" *ngIf="!isExtURL">
                             <label>Body</label>
-                            <ckeditor formControlName="body"
+                            <ckeditor [formControl]="editPageForm.controls['body']"
                                       [class.invalid]="!f.body.valid && f.body.touched"
                                       [(ngModel)]="page.body"
                                       [readonly]="false"
