Page dates are natually timestamps but are now converted into numbers in Firestore for publish querying. Hade to fix that in view

--- a/src/app/components/admin/admin-page/admin-page-item/admin-page-item.component.html
+++ b/src/app/components/admin/admin-page/admin-page-item/admin-page-item.component.html
@@ -4,7 +4,7 @@
         <img class="card-img-top" [src]="page.photoURL" *ngIf="!page.isExtURL">
         <div class="card-body">
             <h5 class="card-title">{{ page.title }}</h5>
-            <h6 class="card-subtitle">{{ page.date.toDate() | date:'mediumDate' }}</h6>
+            <h6 class="card-subtitle">{{ page.date | date:'mediumDate' }}</h6>
             <hr>
             <p class="card-text" *ngIf="!page.isExtURL">{{ page.body | slice:0:75 }}...</p>
             <a [href]="page.extURL" target="_blank" *ngIf="page.isExtURL">
